manifests/bbq-bookkeeper/1-namespace.yaml
---
apiVersion: v1
kind: Namespace                 
metadata:
  name: bbq-bookkeeper
  labels:
    pds.portworx.com/available: "true"
