manifests/bbq-bookkeeper/2-sql-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql 
  namespace: bbq-bookkeeper
spec:
  serviceName: "mssql" 
  replicas: 1 
  selector:
    matchLabels:
      app: mssql  
  template:
    metadata:
      labels:
        app: mssql 
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql 
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
          name: tcpsql
        volumeMounts:
        - name: mssql
          mountPath: "/var/opt/mssql"
        - name: init-script
          mountPath: "/var/opt/mssql/scripts"
      volumes:
      - name: init-script
        configMap:
          name: mssql-init-script
  volumeClaimTemplates:
    - metadata:
        name: mssql
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
        storageClassName: px-db
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: bbq-bookkeeper
  labels:
    app: mssql
spec:
  ports:
  - port: 1433
    targetPort: 1433
    name: tcpsql
  selector:
    app: mssql
  type: ClusterIP
