manifests/bbq-bookkeeper/3-bbq-bookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbqbookeeper-web
  namespace: bbq-bookkeeper
  labels:
    app: bbqinventoryapp
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: bbqinventoryapp
  template:
    metadata:
      labels:
        app: bbqinventoryapp
    spec:
      containers:
      - name: bbqinventoryapp
        image: eshanks16/bbqbookkeeper:ea26ddd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bookeeper-web
  namespace: bbq-bookkeeper
  labels:
    app: bbqinventoryapp
spec:
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001
  selector:
    app: bbqinventoryapp
  type: LoadBalancer
