manifests/bbq-bookkeeper/sql-lb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-lb
  namespace: bbq-bookkeeper
  labels:
    app: mssql
spec:
  ports:
  - port: 1433
    targetPort: 1433
    name: tcpsql
  selector:
    app: mssql
  type: LoadBalancer
