manifests/bbq-bookkeeper/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bbq-bookkeeper-web
  namespace: bbq-bookkeeper
spec:
  podSelector:
    matchLabels:
      app: bbqinventoryapp
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app: mssql
      ports:
        - port: 1433
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bbq-bookkeeper-mssql
  namespace: bbq-bookkeeper
spec:
  podSelector:
    matchLabels:
      app: mssql
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: bbqinventoryapp
      ports:
        - port: 1433
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
